--- a/ChatApp.Web/ChatApp.Web.csproj
+++ b/ChatApp.Web/ChatApp.Web.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.15.0" />
       <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
