--- a/ChatApp.Web/ChatApp.Web.csproj
+++ b/ChatApp.Web/ChatApp.Web.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Azure.Storage.Blobs" Version="12.15.0" />
       <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+      <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
       <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
     </ItemGroup>
