--- a/ChatApp.Web.IntegrationTest/ChatApp.Web.IntegrationTest.csproj
+++ b/ChatApp.Web.IntegrationTest/ChatApp.Web.IntegrationTest.csproj
@@ -9,6 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Identity" Version="1.8.2" />
+        <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.13" />
         <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
