--- a/ChatApp.Web/ChatApp.Web.csproj
+++ b/ChatApp.Web/ChatApp.Web.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Identity" Version="1.8.2" />
       <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.13.1" />
+      <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
       <PackageReference Include="Azure.Storage.Blobs" Version="12.15.0" />
       <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
