--- a/ChatApp.Web/appsettings.json
+++ b/ChatApp.Web/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "https_port": 443,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -20,7 +21,9 @@
     "ConnectionString": "Endpoint=sb://karima-lea-chat-app-service-bus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=vV+vr/i5D1+9I5ZnIpiX2stRfyvHmts5S+ASbG8NlF8=",
     "SendMessageQueueName": "messagequeue"
   },
-
+  
+  
+  
 
   "AllowedHosts": "*"
 }
