--- a/ChatApp.Web.IntegrationTest/ChatApp.Web.IntegrationTest.csproj
+++ b/ChatApp.Web.IntegrationTest/ChatApp.Web.IntegrationTest.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.13" />
         <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.0" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.35" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
