--- a/ChatApp.Web.Tests/ChatApp.Web.Tests.csproj
+++ b/ChatApp.Web.Tests/ChatApp.Web.Tests.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.13" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.35" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
         <PackageReference Include="Moq" Version="4.18.4" />
         <PackageReference Include="System.Transactions.Workflows" Version="0.1.2" />
