--- a/ChatApp.Web/ChatApp.Web.csproj
+++ b/ChatApp.Web/ChatApp.Web.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
       <PackageReference Include="Azure.Storage.Blobs" Version="12.15.0" />
       <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.0" />
+      <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.35" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
       <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
