--- a/ChatApp.Web/appsettings.json
+++ b/ChatApp.Web/appsettings.json
@@ -3,7 +3,11 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information"
+      }
   },
 
   "Cosmos": { 
