--- a/ChatApp.Web.Tests/ChatApp.Web.Tests.csproj
+++ b/ChatApp.Web.Tests/ChatApp.Web.Tests.csproj
@@ -33,4 +33,8 @@
       <ProjectReference Include="..\ChatApp.Web\ChatApp.Web.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services" />
+    </ItemGroup>
+
 </Project>
