--- a/ChatApp.Web/ChatApp.Web.csproj
+++ b/ChatApp.Web/ChatApp.Web.csproj
@@ -19,4 +19,8 @@
       <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="Properties\launchSettings.json" />
+    </ItemGroup>
+
 </Project>
