--- a/.github/workflows/main_chat-app-service.yml
+++ b/.github/workflows/main_chat-app-service.yml
@@ -3,8 +3,7 @@
 
 name: Build and deploy ASP.Net Core app to Azure Web App - chat-app-service
 
-env:    # set this to the name of your Azure Web App
-  AZURE_WEBAPP_PACKAGE_PATH: 'ChatApp.Web/ChatApp.Web.csproj'      # set this to the path to your web app project, defaults to the repository root
+env:    # set this to the name of your Azure Web App     # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '6.0.x'
   Cosmos: ${{ secrets.COSMOS }}
   Blob: ${{ secrets.BLOB }}
@@ -37,7 +36,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release --property:PublishDir='${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+        run: dotnet publish -c Release -o ./publish
 
   deploy:
     runs-on: ubuntu-latest
@@ -54,4 +53,4 @@ jobs:
           app-name: 'chat-app-service'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1728C4DC21A14608B7799B9C301A0FA4 }}
-          package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+          package: './publish'
