trying workflow again

--- a/.github/workflows/main_chat-app-service.yml
+++ b/.github/workflows/main_chat-app-service.yml
@@ -19,6 +19,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: ChatApp.Web
 
     steps:
       - uses: actions/checkout@v2
@@ -36,7 +40,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ./publish
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,4 +57,4 @@ jobs:
           app-name: 'chat-app-service'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1728C4DC21A14608B7799B9C301A0FA4 }}
-          package: './publish'
+          package: .
